src- Version 4.19/objects/Grouping__c.object
<CustomObject>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipName>Transaction_Aggregarate_Volume_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Customer_Spend_Amount__c</fullName>
        <label>Minimum Customer Spend Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Volume Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum Customer Spend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Grouping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grouping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>